k8s/blog-with-microservice.auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-with-micro-auth
spec:
  selector:
    matchLabels:
      app: blog-with-micro-auth
  template:
    metadata:
      labels:
        app: blog-with-micro-auth
    spec:
      containers:
        - name: blog-with-micro-auth
          image: ghcr.io/struckchure/recipe/blog-with-micro-auth
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "128Mi"
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: blog-with-micro-auth-service
spec:
  selector:
    app: blog-with-micro-auth
  ports:
    - protocol: TCP
      port: 50050
      targetPort: 50051
